<resources>
    <string name="app_name">Skywalker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Find the flights your are more intrested!</string>
    <string name="search_placeholder">Flight number</string>
    <string name="menu_options">Menu options</string>
    <string name="search_action">Search</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Subscriptions</string>
    <string name="menu_deals">Deals map</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_map_deal">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="subscribe_action">Subscribe</string>
    <string name="title_activity_results">Results</string>
    <string name="price_deal_tag">ONLY U$D</string>
    <string name="cancel">Cancel</string>
    <string name="unsuscribe_action">Unsuscribe</string>
    <string name="unsuscribe_message">If you unsuscribe, you will stop receiving notifications for this flight.</string>
    <string name="no_results">We couldn\'t find the flight you were looking for. Try again with a different flight.</string>
    <string name="no_suscriptions">It looks like you are not subscribed to any flights yet. Search for a flight and subscribe to get status notifications!</string>
    <string name="notification_message_status">The flight is</string>
    <string name="notification_message_arrival_time">The arrival time is now</string>
    <string name="notification_message_departure_time">The departure time is now</string>
    <string name="notification_message_arrival_terminal">The arrival terminal is now terminal</string>
    <string name="notification_message_departure_terminal">The departure terminal is now terminal</string>
    <string name="notification_message_arrival_gate">The arrival gate is now gate</string>
    <string name="notification_message_departure_gate">The departure gate is now gate</string>
    <string name="notification_message_baggage">Pick your baggage on line</string>
    <string name="the_flight">The flight</string>
    <string name="modified_message">has been modified</string>
    <string name="flights_status_s">Programmed</string>
    <string name="flights_status_a">Active</string>
    <string name="flights_status_r">Re-routed</string>
    <string name="flights_status_l">Landed</string>
    <string name="flights_status_c">Cancelled</string>
    <string name="settings_tittle">Modify the updates\' look-up time to receive notifications more often!</string>
    <string name="minutes">Minutes</string>
    <string name="minute">Minute</string>
    <string name="search_helper">i.e LA2889</string>
    <string name="notification_message_gate_time">The gate time is now at</string>
    <string name="image_paper_plane_description">Paper plane</string>
    <string name="image_city_description">City picture</string>
    <string name="subscription_title">Right now, you are subscribed to these flights. Unscribe if you want to stop notifications for a flight.</string>
    <string name="result_time_dep">Departure time</string>
    <string name="result_time_arr">Arrival time</string>
    <string name="result_term_dep">Departure terminal</string>
    <string name="result_term_arr">Arrival terminal</string>
    <string name="result_gate_dep">Departure gate</string>
    <string name="result_gate_arr">Arrival gate</string>
</resources>
