<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_plane"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_material_fire"
            android:title="@string/menu_deals" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_bell"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
