<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.g3.skywalker.MenuActivity"
    tools:showIn="@layout/app_bar_menu">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:id="@+id/autoCompleteTextView"
        android:completionHint="@string/search_placeholder"
        android:layout_toStartOf="@+id/button"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/textView3"
        tools:text="@string/search_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/colorAccent" />

    <Button
        android:text="@string/search_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignTop="@+id/autoCompleteTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/autoCompleteTextView"
        style="@style/Widget.AppCompat.Button.Colored" />
</RelativeLayout>
